# isgri

./: LICENSE  README.md  pyproject.toml
demo/: lightcurve_walkthrough.ipynb  scwquery_walkthrough.ipynb
src/isgri/catalog/: scwquery.py  wcs.py
src/isgri/utils/: file_loaders.py  lightcurve.py  pif.py  quality.py  time_conversion.py
